--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto= update
 server.port= 8082
 
 spring.application.name=flightApp-Admin
+
+eureka.client.serviceUrl.defaultZone= http://localhost:8084/eureka
