--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ server.port= 8092
 
 spring.application.name=flightApp-Admin
 
-#eureka.client.serviceUrl.defaultZone= http://localhost:8095/eureka
+eureka.client.serviceUrl.defaultZone= http://18.119.21.109:8095/eureka
